+[TEXT] Entered some more text in the AngularJS paragraph

--- a/partials/home.html
+++ b/partials/home.html
@@ -59,7 +59,7 @@
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <h3>Deze website is gemaakt met AngularJS</h3>
-                <p>Het is mijn eerste keer met AngularJS. Maar ik kan al wel zeggen dat ik er na deze website al heel erg van van ben geworden. Het is een moeilijkere opzet fase. Maar daarna werkt alles zo veel meer fijner. Waarschijnlijk zal ik in de toekomst nog wel verder gaan met AngularJS en dan zeker weten nog een stukje WebApps.</p>
+                <p>Het is mijn eerste keer met AngularJS. Maar ik kan al wel zeggen dat ik er na deze website al heel erg van van ben geworden. Het is een moeilijkere opzet fase. Maar daarna werkt alles zo veel meer fijner. Waarschijnlijk zal ik in de toekomst nog wel verder gaan met AngularJS en dan zeker weten nog een stukje WebApps en sites.</p>
             </div>
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <img class="img-responsive" src="img/AngularJS-large.png">
