--- a/templates/header.html
+++ b/templates/header.html
@@ -14,11 +14,15 @@
             <a href="#/"><h1>Joris Mathijssen</h1></a>
         </div>
         <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse navbar-ex1-collapse menu">
+        <div id="menu" class="collapse navbar-collapse navbar-ex1-collapse menu">
             <ul class="nav navbar-nav navbar-left">
                 <li><a href="#/services">Diensten</a>
                 </li>
                 <li><a href="#/about">Over mij</a>
+                </li>
+            </ul>
+            <ul class="nav navbar-nav midhome" style="display: none;">
+                <li class="text-center"><a href="#/">Home</a>
                 </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
