--- a/partials/services.html
+++ b/partials/services.html
@@ -1,31 +1,26 @@
 <!-- Page Content -->
 <div class="section">
     <div class="container">
-
         <div class="row">
+            <div class="animated bounceInLeft topbar col-lg-4 col-md-4">
+                <img src="img/website.png" />
+                <h3>Website nodig?</h3>
+                <p>Een website heeft een belangrijke functie voor uw bedrijf, organisatie of hobby. Het is zowel een <strong class="eyecandy">"Eye Candy"</strong> als een <strong class="infobron">Informatie Bron</strong>. Het is altijd een uitdaging om deze 2 elementen te combineren. In overleg met u kan ik een geschikte website voor u maken, opzetten en bereikbaar houden</p>
+            </div>
+            <div class="animated bounceInDown topbar col-lg-4 col-md-4">
 
-            <div class="col-lg-12">
-                <h1 class="page-header">Services
-                <small>What We Do</small>
-            </h1>
-                <ol class="breadcrumb">
-                    <li><a href="../index.html">Home</a>
-                    </li>
-                    <li class="active">Services</li>
-                </ol>
+                <img src="img/advies.png" />
+                <h3>Computer problemen?</h3>
+                <p>Problemen met uw computer, printer, telefoon of ander elektronisch apparaat? Problemen met installeren van bepaalde software? Altijd al een virusscanner nodig gehad? Is uw computer traag? Bij al deze vragen kan ik uw van dienst zijn. Aan huis of op de werkplaats word het werk gedaan en kunt u snel weer verder met uw apparaten.</p>
+            </div>
+            <div class="animated bounceInRight topbar col-lg-4 col-md-4">
+
+                <img src="img/computer.png" />
+                <h3>Advies nodig?</h3>
+                <p>U kunt altijd en vrijblijvend advies aanvragen door het contact forumulier in te vullen. Ik zal proberen om u een zo duidelijk en goed mogelijk advies te geven voor uw problemen. Advies is zonder enige kosten en zal vaak al kleine probleempjes kunnen oplossen</p>
             </div>
 
         </div>
-        <!-- /.row -->
-
-        <div class="row">
-
-            <div class="col-lg-12">
-                <img class="img-responsive" src="http://placehold.it/1200x300">
-            </div>
-
-        </div>
-        <!-- /.row -->
 
         <!-- Service Paragraphs -->
 
